src/test/deca/context/invalid/Objet/Redeclaration.deca
// Description:
//      New on a int
//
// Results:
//      Line 21 : Rule (1.3) Identifier already used
//
// History:
//      created on 17/1/2022

class A {
    protected int x;
    int foo() {
        return 1;
    }
}

class B {

}

class A extends B {

}